--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-helloo all
+<!DOCTYPE html>
+<html>
+<head>
+   <title>My First HTML Page</title>
+</head>
+<body>
+   <h1>Welcome to My Website</h1>
+   <p>This is a paragraph of text on my first web page.</p>
+
+</body>
+</html>
